--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -9,13 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n[nltk_data]     C:\\Users\\pedro\\AppData\\Roaming\\nltk_data...\n[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "import json\n",
+    "import nltk\n",
+    "nltk.download(\"stopwords\")\n",
     "from nltk.metrics.distance import edit_distance\n",
+    "from nltk.corpus import stopwords\n",
     "import numpy as np"
    ]
   },
@@ -28,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,14 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "159980\nWall time: 19 s\n"
+      "159980\nWall time: 17.1 s\n"
      ]
     }
    ],
@@ -397,12 +408,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
     "sort_palavras = dict(sorted(palavras.items(), key=lambda item: -item[1]))\n",
-    "vocab = list(sort_palavras.keys())[:10000]"
+    "vocab = list(sort_palavras.items())[:10000]\n",
+    "vocab = dict(vocab)"
    ]
   },
   {
@@ -414,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,73 +492,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def tokenize(txt):\n",
+    "    scanner = re.Scanner(\n",
+    "            [\n",
+    "                (r\"\\d+\", lambda scanner, token: (\"NUM\", token)),\n",
+    "                (r\"[.,\\/#!$%\\^&\\*;:{}=\\-_`~()]\", lambda scanner, token: (\"SPECIAL\", token)),\n",
+    "                (r\"[^.,\\/#!$%\\^&\\*;:{}=\\-_`~()\\d]+\", lambda scanner, token: (\"WORD\", token)),\n",
+    "                \n",
+    "            ]\n",
+    "        )\n",
+    "    results = scanner.scan(txt)[0]\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adaptado de https://norvig.com/spell-correct.html\n",
+    "def probability(palavra, N=sum(vocab.values())):\n",
+    "    if palavra in vocab:\n",
+    "        return vocab[palavra] / N\n",
+    "    else:\n",
+    "        return 1 / N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Referência: https://norvig.com/spell-correct.html\n",
     "def corrige(txt):\n",
     "    frase = txt.split()\n",
     "    output = \"\"\n",
     "    for palavra in frase:\n",
-    "        candidates = candidatos(palavra.lower())\n",
-    "        melhorP = \"\"\n",
-    "        found = False\n",
-    "        for i in vocab:\n",
-    "            for e in candidates:\n",
-    "                if e == i:\n",
-    "                    melhorP = e\n",
-    "                    if palavra[0].isupper():\n",
-    "                        output += melhorP.capitalize() + \" \"\n",
-    "                        found = True\n",
-    "                        break\n",
+    "        tokens = tokenize(palavra)\n",
+    "        for tk in tokens:\n",
+    "            if tk[0] == \"WORD\":\n",
+    "                if tk[1].lower() in stopwords.words(\"portuguese\"):\n",
+    "                    output += tk[1]\n",
+    "                else:\n",
+    "                    candidates = candidatos(tk[1].lower())\n",
+    "                    if tk[1][0].isupper():\n",
+    "                        output += max(candidates, key=probability).capitalize()\n",
+    "                        \n",
     "                    else:\n",
-    "                        output += melhorP + \" \"\n",
-    "                        found = True\n",
-    "                        break\n",
-    "            if found:\n",
-    "                break\n",
-    "        if not found:\n",
-    "            output += palavra + \" \"\n",
+    "                        output += max(candidates, key=probability)\n",
+    "            else:\n",
+    "                output += tk[1]\n",
+    "        output += \" \"\n",
     "    return output[:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'Três pratos de trigo para três tigre testes'"
+       "'3 pratos de trigo, para ter tigre testes!!!'"
       ]
      },
      "metadata": {},
-     "execution_count": 71
+     "execution_count": 59
     }
    ],
    "source": [
-    "corrige(\"Três pratos de trigo para três tigres tristes\")"
+    "corrige(\"3 pratos de trigo, para três tigres tristes!!!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 74
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
