--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -26,8 +26,7 @@
     "import nltk\n",
     "nltk.download(\"stopwords\")\n",
     "from nltk.metrics.distance import edit_distance\n",
-    "from nltk.corpus import stopwords\n",
-    "import numpy as np"
+    "from nltk.corpus import stopwords"
    ]
   },
   {
